--- a/boot-test/src/main/resources/application.properties
+++ b/boot-test/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://theclozet-dev.cgvllowoct2b.ap-northeast-2.rds.amazonaws.com:3306/gamel
-spring.datasource.username=theclozet_db
-spring.datasource.password=zmffhwpt!1234
+spring.datasource.url=jdbc:mysql://dsadewre.cgvllowoct2b.ap-northeast-2.rds.amazonaws.com:3306/gamel22
+spring.datasource.username=222
+spring.datasource.password=zmsfds3
